[gd_scene load_steps=75 format=3 uid="uid://casc3bwe3hcqu"]

[ext_resource type="Texture2D" uid="uid://cnqn2u7rlpwvx" path="res://assets/new_compressed_texture_2d.tres" id="1_4kuka"]
[ext_resource type="Script" path="res://scripts/tile.gd" id="1_h8mye"]
[ext_resource type="Texture2D" uid="uid://bx5nfracei6ai" path="res://assets/images/flag_animated.png" id="3_67lp0"]
[ext_resource type="Texture2D" uid="uid://bcq08qkcl548b" path="res://assets/images/tile_animated.png" id="4_7proj"]
[ext_resource type="Texture2D" uid="uid://bjhds6i0dkvtl" path="res://assets/images/sprites.png" id="5_xxdpf"]
[ext_resource type="Texture2D" uid="uid://dkkgmbs8j1kt0" path="res://assets/images/explosion_animated.png" id="6_448lt"]
[ext_resource type="Texture2D" uid="uid://fo8pfp5iumc8" path="res://assets/images/small_explosion.png" id="7_0tk50"]

[sub_resource type="AtlasTexture" id="AtlasTexture_csawf"]
atlas = ExtResource("1_4kuka")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ettc8"]
atlas = ExtResource("1_4kuka")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l38ya"]
atlas = ExtResource("5_xxdpf")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lek58"]
atlas = ExtResource("5_xxdpf")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuekr"]
atlas = ExtResource("5_xxdpf")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_53b7l"]
atlas = ExtResource("5_xxdpf")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_keqbh"]
atlas = ExtResource("5_xxdpf")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_op5v0"]
atlas = ExtResource("5_xxdpf")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aehp3"]
atlas = ExtResource("5_xxdpf")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkr5e"]
atlas = ExtResource("5_xxdpf")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_e2tf2"]
animations = [{
"frames": [],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l38ya")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lek58")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuekr")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53b7l")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_keqbh")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_op5v0")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aehp3")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkr5e")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e10fg"]
atlas = ExtResource("1_4kuka")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5maxo"]
atlas = ExtResource("1_4kuka")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbyev"]
atlas = ExtResource("1_4kuka")
region = Rect2(32, 0, 16, 16)

[sub_resource type="Animation" id="Animation_ap0ot"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_euxgd"]
resource_name = "hover_release"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d74st"]
_data = {
"RESET": SubResource("Animation_ap0ot"),
"hover_release": SubResource("Animation_euxgd")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_mdmdr"]
atlas = ExtResource("1_4kuka")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ent0o"]
atlas = ExtResource("3_67lp0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vs2m"]
atlas = ExtResource("3_67lp0")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6iwm"]
atlas = ExtResource("3_67lp0")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5mdq"]
atlas = ExtResource("3_67lp0")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yrmu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ent0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vs2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6iwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5mdq")
}],
"loop": true,
"name": &"waving",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p8p7n"]
atlas = ExtResource("1_4kuka")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iyn4"]
atlas = ExtResource("4_7proj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0vc5"]
atlas = ExtResource("4_7proj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s3tx"]
atlas = ExtResource("4_7proj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3jct"]
atlas = ExtResource("4_7proj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eapyr"]
atlas = ExtResource("4_7proj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pj4c"]
atlas = ExtResource("4_7proj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmi6c"]
atlas = ExtResource("4_7proj")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff08p"]
atlas = ExtResource("4_7proj")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lobjn"]
atlas = ExtResource("4_7proj")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glo47"]
atlas = ExtResource("4_7proj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4o10"]
atlas = ExtResource("4_7proj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2q01"]
atlas = ExtResource("4_7proj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c80oh"]
atlas = ExtResource("4_7proj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0aav"]
atlas = ExtResource("4_7proj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8khfc"]
atlas = ExtResource("4_7proj")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykx0i"]
atlas = ExtResource("4_7proj")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y6vl"]
atlas = ExtResource("4_7proj")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngdtx"]
atlas = ExtResource("4_7proj")
region = Rect2(256, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_86f66"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iyn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0vc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s3tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3jct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eapyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pj4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmi6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff08p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lobjn")
}],
"loop": false,
"name": &"0",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glo47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4o10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2q01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c80oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0aav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8khfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykx0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y6vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngdtx")
}],
"loop": false,
"name": &"1",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ovgn"]
atlas = ExtResource("6_448lt")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx2ab"]
atlas = ExtResource("6_448lt")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ua5"]
atlas = ExtResource("6_448lt")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_admnf"]
atlas = ExtResource("6_448lt")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jba3k"]
atlas = ExtResource("6_448lt")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ruq"]
atlas = ExtResource("6_448lt")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_haol6"]
atlas = ExtResource("6_448lt")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs0b0"]
atlas = ExtResource("6_448lt")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ll2f"]
atlas = ExtResource("6_448lt")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yg77"]
atlas = ExtResource("6_448lt")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x84bh"]
atlas = ExtResource("6_448lt")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptfcm"]
atlas = ExtResource("6_448lt")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g84cs"]
atlas = ExtResource("6_448lt")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eudet"]
atlas = ExtResource("7_0tk50")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttmy6"]
atlas = ExtResource("7_0tk50")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmgju"]
atlas = ExtResource("7_0tk50")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym7fw"]
atlas = ExtResource("7_0tk50")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvla4"]
atlas = ExtResource("7_0tk50")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge3wl"]
atlas = ExtResource("7_0tk50")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_owue2"]
atlas = ExtResource("7_0tk50")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt7j8"]
atlas = ExtResource("7_0tk50")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydf4e"]
atlas = ExtResource("7_0tk50")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_imuay"]
atlas = ExtResource("7_0tk50")
region = Rect2(576, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6lnhf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ovgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx2ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ua5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_admnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jba3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ruq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haol6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs0b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ll2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yg77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x84bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptfcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g84cs")
}],
"loop": false,
"name": &"big_explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eudet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttmy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmgju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym7fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvla4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge3wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owue2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt7j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydf4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imuay")
}],
"loop": false,
"name": &"small_explosion",
"speed": 10.0
}]

[node name="Tile" type="Node2D"]
script = ExtResource("1_h8mye")

[node name="ClearTexture" type="TextureRect" parent="."]
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_csawf")

[node name="ExplosionTexture" type="TextureRect" parent="."]
visible = false
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_ettc8")

[node name="NumberTexture" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e2tf2")
animation = &"6"
centered = false

[node name="MineTexture" type="TextureRect" parent="."]
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_e10fg")

[node name="TileTexture" type="TextureRect" parent="."]
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_5maxo")

[node name="ClickTexture" type="TextureRect" parent="."]
visible = false
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_bbyev")

[node name="ClickAnimation" type="AnimationPlayer" parent="ClickTexture"]
libraries = {
"": SubResource("AnimationLibrary_d74st")
}

[node name="QuestionTexture" type="TextureRect" parent="."]
visible = false
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_mdmdr")

[node name="FlagTexture" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_3yrmu")
animation = &"waving"
autoplay = "waving"
centered = false

[node name="WrongFlag" type="TextureRect" parent="."]
visible = false
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_p8p7n")

[node name="DestroyedTile" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 5
sprite_frames = SubResource("SpriteFrames_86f66")
animation = &"1"
centered = false
offset = Vector2(-8, -8)

[node name="ExplosionAnimation" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 10
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_6lnhf")
animation = &"big_explosion"
centered = false
offset = Vector2(-24, -24)

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="DestroyedTile" to="." method="_on_destroyed_tile_animation_finished"]
[connection signal="animation_finished" from="ExplosionAnimation" to="." method="_on_explosion_animation_animation_finished"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
